--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
     width: 100vw;
     background-color: red;
     color: #fff;
+    overflow: hidden;
 }
 
 header {
@@ -38,16 +39,17 @@ header {
 
 .biscoito {
     width: 230px;
-    object-fit: cover;
+    filter: drop-shadow(0 0 2px black);
+    display: block;
     position: absolute;
     top: 49%;
     left: 30%;
     cursor: pointer;
-    transition: trasform 0.3s ease;
+    animation: rotate 100s linear infinite;
 }
 
 .biscoito:active {
-    transform: scale(1.20);
+    width: 240px;
 }
 
 .numberCookies {
@@ -140,6 +142,35 @@ header {
     padding: 13px;
 }
 
+.pizza-particle {
+    width: 30px;
+    position: absolute;
+    top: 500px;
+    left: 0px;
+    pointer-events: none;
+    animation: pizzaups 3s linear forwards;
+}
 
+/*keyframes*/
+
+@keyframes pizzaups {
+    from {
+        opacity: 1;
+    }   
+    to {
+        opacity: 0;
+        top: 0;
+    } 
+}
+
+@keyframes rotate {
+    from {
+        transform: rotate(0);
+    }   
+    to {
+        transform: rotate(360deg
+        );
+    } 
+}
 
 
