--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,28 @@ body {
 header {
     text-align: center;
     background-color: green;
-    padding: 35px;
+    padding: 15px;
+}
+
+.rankButton {
+    text-align: center;
+    display: block;
+    max-width: 110px;
+    height: 30px;
+    border-radius: 10px;
+    background-color: red;
+    color: #fff;
+    font-weight: 500;
+    cursor: pointer;
+    box-shadow: 1px 1px 1px #000000;
+    text-decoration: none;
+    transition: 0.3s;
+}
+
+.rankButton:hover,
+.rankButton:focus {
+    outline: none;
+    background-color: rgb(221, 42, 42);
 }
 
 .pizza {
